WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220253
[WPE][GTK] Geolocation does not work under flatpak
https://bugs.webkit.org/show_bug.cgi?id=220253
Summary
[WPE][GTK] Geolocation does not work under flatpak
Michael Catanzaro
Reported
2021-01-04 12:48:12 PST
Geolocation does not work under flatpak. We should use the location portal. Warning: cannot test this with Epiphany since it allows direct bus access to geoclue.
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2021-06-30 08:09:59 PDT
We also need to fix geolocation under the bubblewrap sandbox, but using the location portal should fix both cases at once.
Carlos Garcia Campos
Comment 2
2021-06-30 08:14:13 PDT
I don't think there's a problem with the bubblewrpa sandbox, because geolocation manager is in the UI process
Michael Catanzaro
Comment 3
2021-06-30 08:30:32 PDT
OK, my assumption was bad then.
Georges Basile Stavracas Neto
Comment 4
2024-03-05 11:41:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25496
EWS
Comment 5
2024-03-06 10:46:00 PST
Committed
275746@main
(18a97d248bdc): <
https://commits.webkit.org/275746@main
> Reviewed commits have been landed. Closing PR #25496 and removing active labels.
Michael Catanzaro
Comment 6
2026-03-26 10:57:09 PDT
***
Bug 189666
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug