Source/WebKit/UIProcess/geoclue/GeoclueGeolocationProvider.h
@@ -50,29 +50,49 @@ public:
     void setEnableHighAccuracy(bool);
 
 private:
-    void destroyManager();
-    void destroyManagerLater();
+    enum class LocationProviderSource : uint8_t { Unknown, Portal, Geoclue };
 
-    void setupManager(GRefPtr<GDBusProxy>&&);
-    void createClient(const char*);
-    void setupClient(GRefPtr<GDBusProxy>&&);
+    void destroyState();
+    void destroyStateLater();
+
+    void acquirePortalProxy();
+    void setupPortalProxy(GRefPtr<GDBusProxy>&&);
+    void createPortalSession();
+    void startPortalSession();
+    void portalLocationUpdated(GVariant*);
+    void stopPortalSession();
+
+    void createGeoclueManager();
+    void setupGeoclueManager(GRefPtr<GDBusProxy>&&);
+    void createGeoclueClient(const char*);
+    void setupGeoclueClient(GRefPtr<GDBusProxy>&&);
     void requestAccuracyLevel();
     void createLocation(const char*);
     void locationUpdated(GRefPtr<GDBusProxy>&&);
     void didFail(CString);
 
-    void startClient();
-    void stopClient();
+    void startGeoclueClient();
+    void stopGeoclueClient();
 
     static void clientLocationUpdatedCallback(GDBusProxy*, gchar*, gchar*, GVariant*, gpointer);
 
     bool m_isRunning { false };
     bool m_isHighAccuracyEnabled { false };
-    GRefPtr<GDBusProxy> m_manager;
-    GRefPtr<GDBusProxy> m_client;
+    struct {
+        GRefPtr<GDBusProxy> manager;
+        GRefPtr<GDBusProxy> client;
+    } m_geoclue;
+    struct {
+        GRefPtr<GDBusProxy> locationPortal;
+        std::optional<String> senderName;
+        std::optional<String> sessionId;
+        unsigned locationUpdatedSignalId;
+        unsigned responseSignalId;
+    } m_portal;
     GRefPtr<GCancellable> m_cancellable;
     UpdateNotifyFunction m_updateNotifyFunction;
-    RunLoop::Timer m_destroyManagerLaterTimer;
+    LocationProviderSource m_sourceType { LocationProviderSource::Unknown };
+    RunLoop::Timer m_destroyLaterTimer;
 };
 
 } // namespace WebKit
